fixed overflow

--- a/style.css
+++ b/style.css
@@ -52,20 +52,19 @@ html {
     height: 25vmax;
     max-height: 320px;
 
+    padding: 16px;
+
     background-color: #FFFFFF;
     border-radius: 16px;
     box-shadow: 0px 12px 12px #7E262D;
 }
 .cardzime p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 100%;
     font-weight: bold;
     text-align: center;
 }
 .cardzime img {
     width: 100%;
-    grid-row: 2;
-    border-bottom: 1px dotted;
 }
 
 .cardzimeinfo {
@@ -232,5 +231,11 @@ button:active {
     }
     nav a {
         border-bottom: #75232a 1px solid;
+    }
+    .cardzime img {
+        width: 90%;
+    }
+    .cardzime p {
+        font-size: 0.9rem;
     }
 }
